Attempt to fix layout problems (Con'd)

--- a/css/master.css
+++ b/css/master.css
@@ -125,6 +125,10 @@ a:hover {
   height: 40%;
 }
 
+.utterances {
+  position: absolute;
+}
+
 /* .bg {
   width: 100%;
 }
